.apex/src/objects/Purchase__c.object
<CustomObject>
    <fields>
        <fullName>ClientId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClientId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrandTotal__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalItems__c</fullName>
        <label>Total Items</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase</label>
    <nameField>
        <label>Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>